--- a/public/static/login.html
+++ b/public/static/login.html
@@ -3,8 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login - PointaFam</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        /* Container for the layout */
+        .layout-container {
+            display: flex;
+            height: 100vh; /* Full viewport height */
+        }
+
+        /* Image container (left side) */
+        .image-container {
+            flex: 1; /* Takes up half of the page */
+            display: flex;
+            overflow: hidden;
+            position: relative;
+        }
+
+        /* Individual image styling */
+        .image-container img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
+            opacity: 0;
+            transition: opacity 1s ease-in-out;
+        }
+
+        /* Show the first image by default */
+        .image-container img:first-child {
+            opacity: 1;
+        }
+
+        /* Form container (right side) */
+        .form-container {
+            flex: 1; /* Takes up the other half of the page */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 2rem;
+        }
+    </style>
     <script>
         async function handleLogin(event) {
             event.preventDefault();
@@ -43,28 +84,50 @@
         }
     </script>
 </head>
-<body class="bg-gray-100 p-4">
-    <div class="header">
-        <a href="/">
-            <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo">
-        </a>
-        <span>PointaFam</span>
-    </div>
-    <div class="container mx-auto max-w-md bg-white rounded-lg shadow-md p-6">
-        <h1 class="text-3xl font-bold text-center mb-6">Login</h1>
-        <form id="login-form" onsubmit="handleLogin(event)">
-            <div class="mb-4">
-                <input type="email" name="email" placeholder="Email Address" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+<body class="bg-gray-100">
+    <!-- Layout Container -->
+    <div class="layout-container">
+        <!-- Image Container (Left Side) -->
+        <div class="image-container">
+            <img src="/public/assets/farmer.jpg" alt="Farmer" class="farmer-image">
+            <img src="/public/assets/retailer.jpg" alt="Retailer" class="retailer-image">
+        </div>
+
+        <!-- Form Container (Right Side) -->
+        <div class="form-container">
+            <div class="bg-white rounded-lg shadow-md p-8 w-full max-w-md">
+                <h1 class="text-3xl font-bold text-center mb-6">Login</h1>
+                <form id="login-form" onsubmit="handleLogin(event)">
+                    <div class="mb-4">
+                        <input type="email" name="email" placeholder="Email Address" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                    </div>
+                    <div class="mb-4">
+                        <input type="password" name="password" placeholder="Password" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                    </div>
+                    <button type="submit" class="bg-blue-500 text-white p-3 rounded w-full hover:bg-blue-600 transition duration-200">Login</button>
+                </form>
+                <div id="login-result" class="mt-4 text-center text-red-500"></div>
+                <p class="mt-4 text-center">Don't have an account? 
+                   <a href="/auth" class="text-blue-500 underline">Register here</a>
+                </p>
             </div>
-            <div class="mb-4">
-                <input type="password" name="password" placeholder="Password" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
-            </div>
-            <button type="submit" class="bg-blue-500 text-white p-3 rounded w-full hover:bg-blue-600 transition duration-200">Login</button>
-        </form>
-        <div id="login-result" class="mt-4 text-center text-red-500"></div>
-        <p class="mt-4 text-center">Don't have an account? 
-           <a href="/auth" class="text-blue-500 underline">Register here</a>
-        </p>
+        </div>
     </div>
+
+    <script>
+        // image transition
+        const images = document.querySelectorAll('.image-container img');
+        let currentImageIndex = 0;
+
+        function showNextImage() {
+            images[currentImageIndex].style.opacity = 0;
+
+            currentImageIndex = (currentImageIndex + 1) % images.length;
+
+            images[currentImageIndex].style.opacity = 1;
+        }
+
+        setInterval(showNextImage, 5000);
+    </script>
 </body>
 </html>
