--- a/public/static/contact.html
+++ b/public/static/contact.html
@@ -5,22 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - PointaFam</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <style>
-        /* Ensure the body takes up the full height of the viewport */
-        body {
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-
-        /* Make the main content scrollable */
-        .main-content {
-            flex: 1;
-            overflow-y: auto;
-            padding-top: 80px; /* Adjust based on header height */
-            padding-bottom: 60px; /* Adjust based on footer height */
-        }
-    </style>
+    <link rel="stylesheet" href="/public/css/styles.css">
 </head>
 <body class="bg-gray-100">
     <!-- Fixed Header -->
