--- a/public/static/cart.html
+++ b/public/static/cart.html
@@ -6,36 +6,7 @@
     <title>Cart</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f7fafc;
-        }
-        .cart-item {
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-            background-color: white;
-            border-radius: 8px;
-            padding: 16px;
-            margin-bottom: 16px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        .cart-item:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .header {
-            background-color: #4caf50; /* Green background */
-            color: white;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .checkout-button {
-            background-color: #4caf50; /* Green button */
-            color: white;
-            transition: background-color 0.3s ease;
-        }
-        .checkout-button:hover {
-            background-color: #388e3c; /* Darker green on hover */
-        }
-    </style>
+    <link rel="stylesheet" href="/public/css/styles.css">
 </head>
 <body class="bg-gray-100">
     <!-- Header -->
