--- a/public/static/farmer_dashboard.html
+++ b/public/static/farmer_dashboard.html
@@ -5,126 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farmer Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-            background-color: #f7fafc;
-        }
-        .content {
-            display: flex;
-            flex: 1;
-            overflow: hidden;
-        }
-        .sidebar {
-            width: 250px;
-            background-color: #4caf50;
-            color: white;
-            flex-shrink: 0;
-            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-        }
-        .main-content {
-            flex: 1;
-            overflow-y: auto;
-            padding: 20px;
-            background-color: #ffffff; /* White background */
-        }
-        .header, .footer {
-            background-color: #4caf50; /* Green background */
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 50;
-        }
-        .footer {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            z-index: 50;
-        }
-        .card {
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            margin-bottom: 20px;
-        }
-        .card h3 {
-            font-size: 1.25rem;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-        .card p {
-            color: #4a5568; /* Dark gray text */
-        }
-        .sidebar ul {
-            list-style: none;
-            padding: 0;
-        }
-        .sidebar ul li {
-            margin-bottom: 15px;
-        }
-        .sidebar ul li a {
-            color: white;
-            text-decoration: none;
-            display: flex;
-            align-items: center;
-            padding: 10px;
-            border-radius: 4px;
-            transition: background-color 0.3s ease;
-        }
-        .sidebar ul li a:hover {
-            background-color: #388e3c; 
-        }
-        .sidebar ul li a i {
-            margin-right: 10px;
-        }
-        .form-input {
-            border: 1px solid #e2e8f0;
-            border-radius: 4px;
-            padding: 10px;
-            width: 100%;
-            margin-bottom: 15px;
-            transition: border-color 0.3s ease;
-        }
-        .form-input:focus {
-            border-color: #4caf50; 
-            outline: none;
-        }
-        .btn-primary {
-            background-color: #4caf50; 
-            color: white;
-            padding: 10px 20px;
-            border-radius: 4px;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        .btn-primary:hover {
-            background-color: #388e3c; 
-        }
-        .btn-secondary {
-            background-color: #e2e8f0; 
-            color: #4a5568; 
-            padding: 10px 20px;
-            border-radius: 4px;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        .btn-secondary:hover {
-            background-color: #cbd5e0; 
-        }
-    </style>
+    <link rel="stylesheet" href="/public/css/styles.css">
 </head>
 <body>
     <!-- Header -->
