--- a/public/static/retailer_dashboard.html
+++ b/public/static/retailer_dashboard.html
@@ -6,131 +6,12 @@
     <title>Retailer Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-            background-color: #f7fafc;
-        }
-        .content {
-            display: flex;
-            flex: 1;
-            overflow: hidden;
-        }
-        .sidebar {
-            width: 250px;
-            background-color: #4caf50;
-            color: white;
-            flex-shrink: 0;
-            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-        }
-        .main-content {
-            flex: 1;
-            overflow-y: auto;
-            padding: 20px;
-            background-color: #ffffff;
-        }
-        .header, .footer {
-            background-color: #4caf50; 
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 50;
-        }
-        .footer {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            z-index: 50;
-        }
-        .card {
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            margin-bottom: 20px;
-        }
-        .card h3 {
-            font-size: 1.25rem;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-        .card p {
-            color: #4a5568;
-        }
-        .sidebar ul {
-            list-style: none;
-            padding: 0;
-        }
-        .sidebar ul li {
-            margin-bottom: 15px;
-        }
-        .sidebar ul li a {
-            color: white;
-            text-decoration: none;
-            display: flex;
-            align-items: center;
-            padding: 10px;
-            border-radius: 4px;
-            transition: background-color 0.3s ease;
-        }
-        .sidebar ul li a:hover {
-            background-color: #388e3c;
-        }
-        .sidebar ul li a i {
-            margin-right: 10px;
-        }
-        .form-input {
-            border: 1px solid #e2e8f0;
-            border-radius: 4px;
-            padding: 10px;
-            width: 100%;
-            margin-bottom: 15px;
-            transition: border-color 0.3s ease;
-        }
-        .form-input:focus {
-            border-color: #4caf50;
-            outline: none;
-        }
-        .btn-primary {
-            background-color: #4caf50;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 4px;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        .btn-primary:hover {
-            background-color: #388e3c; 
-        }
-        .btn-secondary {
-            background-color: #e2e8f0; 
-            color: #4a5568; 
-            padding: 10px 20px;
-            border-radius: 4px;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        .btn-secondary:hover {
-            background-color: #cbd5e0; 
-        }
-    </style>
+    <link rel="stylesheet" href="/public/css/styles.css">
 </head>
-<body>
+<body class="bg-gray-100">
     <!-- Header -->
-    <div class="header">
-        <div class="container mx-auto flex items-center justify-between">
+    <header class="header bg-green-600 text-white fixed top-0 left-0 right-0 z-50 shadow-md">
+        <div class="container mx-auto flex items-center justify-between p-4">
             <a href="/">
                 <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-10">
             </a>
@@ -139,33 +20,41 @@
                 <i class="fas fa-shopping-cart text-2xl"></i>
             </a>
         </div>
-    </div>
+    </header>
 
     <!-- Content -->
-    <div class="content mt-16">
+    <div class="content flex mt-16">
         <!-- Sidebar -->
-        <div class="sidebar p-6">
+        <div class="sidebar bg-green-600 text-white w-64 flex-shrink-0 p-6 shadow-lg">
             <h2 class="text-2xl font-bold mb-6">Dashboard</h2>
             <ul>
-                <li><a href="javascript:void(0);" onclick="loadProducts()"><i class="fas fa-boxes"></i> Available Products</a></li>
-                <li><a href="javascript:void(0);" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+                <li class="mb-4">
+                    <a href="javascript:void(0);" onclick="loadProducts()" class="flex items-center p-2 rounded hover:bg-green-700 transition duration-200">
+                        <i class="fas fa-boxes mr-2"></i> Available Products
+                    </a>
+                </li>
+                <li class="mb-4">
+                    <a href="javascript:void(0);" onclick="logout()" class="flex items-center p-2 rounded hover:bg-green-700 transition duration-200">
+                        <i class="fas fa-sign-out-alt mr-2"></i> Logout
+                    </a>
+                </li>
             </ul>
         </div>
 
         <!-- Main Content -->
-        <div class="main-content">
+        <div class="main-content flex-1 p-6 overflow-y-auto">
             <!-- Welcome Section -->
-            <div class="card bg-green-50 mb-6">
-                <h2 class="text-2xl font-bold">Welcome to your Dashboard</h2>
-                <p>Manage your products, view your cart, and update your profile.</p>
+            <div class="card bg-white rounded-lg shadow-md p-6 mb-6">
+                <h2 class="text-2xl font-bold mb-4">Welcome to your Dashboard</h2>
+                <p class="text-gray-600">Manage your products, view your cart, and update your profile.</p>
             </div>
 
             <!-- Available Products Section -->
             <div id="products-section" class="mb-6">
                 <h2 class="text-2xl font-bold mb-4">Available Products</h2>
                 <div class="mb-4">
-                    <label for="category" class="block text-gray-700">Select Category:</label>
-                    <select id="category" class="form-input" onchange="loadProducts(this.value)">
+                    <label for="category" class="block text-gray-700 mb-2">Select Category:</label>
+                    <select id="category" class="form-input w-full" onchange="loadProducts(this.value)">
                         <option value="">All</option>
                         <option value="vegetables">Vegetables</option>
                         <option value="fruits">Fruits</option>
@@ -173,14 +62,14 @@
                     </select>
                 </div>
                 <div id="products-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-                    <!-- Products will be loaded here dynamically -->
+                    <!-- Products will be dynamically loaded here -->
                 </div>
             </div>
 
             <!-- Manage Profile Section -->
             <div id="manage-profile" class="mb-6">
                 <h2 class="text-2xl font-bold mb-4">Manage Profile</h2>
-                <div class="card">
+                <div class="card bg-white rounded-lg shadow-md p-6">
                     <div class="flex items-center mb-4">
                         <div class="relative">
                             <img id="profile-picture" src="profile_picture_url" alt="Profile Picture" class="w-16 h-16 rounded-full mr-4 cursor-pointer" onclick="document.getElementById('profile-picture-input').click()">
@@ -198,15 +87,15 @@
 
             <!-- Edit Profile Form -->
             <div id="edit-profile-form" class="hidden">
-                <form id="update-profile-form" onsubmit="handleProfileUpdate(event)">
+                <form id="update-profile-form" onsubmit="handleProfileUpdate(event)" class="bg-white rounded-lg shadow-md p-6">
                     <div class="mb-4">
-                        <input type="text" id="edit-username" name="username" placeholder="Username" class="form-input" required>
+                        <input type="text" id="edit-username" name="username" placeholder="Username" class="form-input w-full" required>
                     </div>
                     <div class="mb-4">
-                        <input type="email" id="edit-email" name="email" placeholder="Email" class="form-input" required>
+                        <input type="email" id="edit-email" name="email" placeholder="Email" class="form-input w-full" required>
                     </div>
                     <div class="mb-4">
-                        <input type="text" id="edit-location" name="location" placeholder="Location" class="form-input" required>
+                        <input type="text" id="edit-location" name="location" placeholder="Location" class="form-input w-full" required>
                     </div>
                     <button type="submit" class="btn-primary">Update Profile</button>
                 </form>
@@ -215,9 +104,12 @@
     </div>
 
     <!-- Footer -->
-    <div class="footer">
-        <p>&copy; 2025 PointaFam. All rights reserved.</p>
-    </div>
+    <footer class="footer bg-green-600 text-white fixed bottom-0 left-0 right-0 z-50 shadow-md">
+        <div class="container mx-auto text-center p-4">
+            <p>&copy; 2025 PointaFam. All rights reserved.</p>
+        </div>
+    </footer>
+
     <script src="/public/script/script.js"></script>
 </body>
 </html>
