feat(docs): remove redundant comments

--- a/public/static/farmer_dashboard.html
+++ b/public/static/farmer_dashboard.html
@@ -44,9 +44,9 @@
         }
 
         .profile-section {
-            margin-top: auto; /* Push profile section to the bottom */
+            margin-top: auto;
             padding: 1.5rem;
-            border-top: 1px solid rgba(255, 255, 255, 0.1); /* Add a subtle border */
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
         }
     </style>
 </head>
@@ -58,7 +58,7 @@
                 <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-10">
             </a>
             <h1 class="text-xl font-bold">Farmer Dashboard</h1>
-            <div class="w-10"></div> <!-- Placeholder for alignment -->
+            <div class="w-10"></div>
         </div>
     </header>
 
