--- a/public/static/about.html
+++ b/public/static/about.html
@@ -5,31 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - PointaFam</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/public/css/styles.css">
 </head>
 <body class="bg-gray-100">
-    <!-- Fixed Header -->
-    <header class="fixed top-0 left-0 right-0 bg-white shadow-md z-50">
-        <div class="container mx-auto flex justify-between items-center p-4">
-            <a href="/">
-                <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-12">
-            </a>
-            <nav id="user-account" class="space-x-4">
-                <button onclick="window.location.href='/about'" class="bg-white text-green-600 px-4 py-2 rounded-lg hover:bg-green-100 hover:text-green-700 transition duration-200">
-                    About Us
-                </button>
-                <button onclick="window.location.href='/contact'" class="bg-white text-green-600 px-4 py-2 rounded-lg hover:bg-green-100 hover:text-green-700 transition duration-200">
-                    Contact Us
-                </button>
-                <button onclick="window.location.href='/login'" class="bg-white text-green-600 px-4 py-2 rounded-lg hover:bg-green-100 hover:text-green-700 transition duration-200">
-                    Login
-                </button>
-            </nav>
+    <div class="header flex justify-between items-center p-4 bg-white shadow-md">
+        <a href="/">
+            <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo">
+        </a>
+        <div id="user-account" class="nav-buttons">
+            <button onclick="window.location.href='/about'">About Us</button>
+            <button onclick="window.location.href='/contact'">Contact Us</button>
+            <button onclick="window.location.href='/login'">Login</button>
         </div>
-    </header>
+    </div>
 
-    <!-- Scrollable Main Content -->
-    <main class="main-content container mx-auto text-center">
+    <div class="container mx-auto mt-10 text-center">
         <h1 class="text-4xl font-bold mb-6">About PointaFam</h1>
         <p class="text-lg mb-6">At PointaFam, we believe in connecting farmers directly with consumers to provide fresh, organic produce while supporting local agriculture.</p>
 
@@ -46,24 +35,10 @@
         <h2 class="text-2xl font-bold mb-4">Meet Our Team</h2>
         <p class="mb-6">Our dedicated team is passionate about agriculture and committed to making a positive impact in the community.</p>
 
-        <div class="card">
-            <img src="/public/assets/team.jpg" alt="Our Team" class="w-24 h-24 rounded-full object-cover mx-auto mb-4">
-            <div class="text-center">
-                <h3 class="text-xl font-bold">Ferdynand Odhiambo</h3>
-                <p class="text-gray-600">Software Engineer</p>
-            </div>
-        </div>
+        <img src="/public/assets/team.jpg" alt="Our Team" class="w-full h-auto rounded-lg mb-6">
 
         <h2 class="text-2xl font-bold mb-4">Join Us!</h2>
         <p>If you're a farmer or consumer interested in joining our community, please visit our Contact Us page for more information.</p>
-    </main>
-
-    <!-- Fixed Footer -->
-    <footer class="fixed bottom-0 left-0 right-0 bg-green-600 text-white py-4 z-50">
-        <div class="container mx-auto text-center">
-            &copy; 2025 PointaFam. All rights reserved.
-        </div>
-    </footer>
-    <script src="/public/script/script.js"></script>
+    </div>
 </body>
 </html>
