--- a/public/static/login.html
+++ b/public/static/login.html
@@ -3,66 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - PointaFam</title>
+    <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/public/css/styles.css">
+    <script>
+        async function handleLogin(event) {
+            event.preventDefault();
+            const form = event.target;
+            const formData = new FormData(form);
+
+            const response = await fetch('/api/login', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    email: formData.get('email'),
+                    password: formData.get('password')
+                })
+            });
+
+            if (response.ok) {
+                const data = await response.json();
+                localStorage.setItem('userID', data.userID);
+                localStorage.setItem('token', data.token);
+                localStorage.setItem('role', data.role);
+                redirectToDashboard(data.role);
+            } else {
+                const error = await response.json();
+                document.getElementById('login-result').innerText = `Error: ${error.error}`;
+            }
+        }
+
+        function redirectToDashboard(role) {
+            if (role === 'farmer') {
+                window.location.href = '/farmer/dashboard';
+            } else if (role === 'retailer') {
+                window.location.href = '/retailer/dashboard';
+            }
+        }
+    </script>
 </head>
-<body class="bg-gray-100">
-    <!-- Fixed Header -->
-    <header class="fixed-header">
-        <div class="container mx-auto flex justify-between items-center p-4">
-            <a href="/">
-                <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-12">
-            </a>
-            <nav id="user-account" class="space-x-4">
-                <button onclick="window.location.href='/about'" class="bg-white text-green-600 px-4 py-2 rounded-lg hover:bg-green-100 hover:text-green-700 transition duration-200">
-                    About Us
-                </button>
-                <button onclick="window.location.href='/contact'" class="bg-white text-green-600 px-4 py-2 rounded-lg hover:bg-green-100 hover:text-green-700 transition duration-200">
-                    Contact Us
-                </button>
-                <button onclick="window.location.href='/login'" class="bg-white text-green-600 px-4 py-2 rounded-lg hover:bg-green-100 hover:text-green-700 transition duration-200">
-                    Login
-                </button>
-            </nav>
-        </div>
-    </header>
-
-    <!-- Layout Container -->
-    <div class="layout-container">
-        <!-- Image Container (Left Side) -->
-        <div class="image-container">
-            <img src="/public/assets/farmer.jpg" alt="Farmer" class="farmer-image">
-            <img src="/public/assets/retailer.jpg" alt="Retailer" class="retailer-image">
-        </div>
-
-        <!-- Form Container (Right Side) -->
-        <div class="form-container">
-            <div class="bg-white rounded-lg shadow-md p-8 w-full max-w-md">
-                <h1 class="text-3xl font-bold text-center mb-6">Login</h1>
-                <form id="login-form" onsubmit="handleLogin(event)">
-                    <div class="mb-4">
-                        <input type="email" name="email" placeholder="Email Address" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
-                    </div>
-                    <div class="mb-4">
-                        <input type="password" name="password" placeholder="Password" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
-                    </div>
-                    <button type="submit" class="bg-blue-500 text-white p-3 rounded w-full hover:bg-blue-600 transition duration-200">Login</button>
-                </form>
-                <div id="login-result" class="mt-4 text-center text-red-500"></div>
-                <p class="mt-4 text-center">Don't have an account? 
-                   <a href="/register" class="text-blue-500 underline">Register here</a>
-                </p>
-            </div>
-        </div>
+<body class="bg-gray-100 p-4">
+    <div class="header">
+        <a href="/">
+            <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo">
+        </a>
+        <span>PointaFam</span>
     </div>
-
-    <!-- Fixed Footer -->
-    <footer class="fixed-footer">
-        <div class="container mx-auto text-center">
-            &copy; 2025 PointaFam. All rights reserved.
-        </div>
-    </footer>
-      <script src="/public/script/script.js"></script>
+    <div class="container mx-auto max-w-md bg-white rounded-lg shadow-md p-6">
+        <h1 class="text-3xl font-bold text-center mb-6">Login</h1>
+        <form id="login-form" onsubmit="handleLogin(event)">
+            <div class="mb-4">
+                <input type="email" name="email" placeholder="Email Address" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+            </div>
+            <div class="mb-4">
+                <input type="password" name="password" placeholder="Password" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+            </div>
+            <button type="submit" class="bg-blue-500 text-white p-3 rounded w-full hover:bg-blue-600 transition duration-200">Login</button>
+        </form>
+        <div id="login-result" class="mt-4 text-center text-red-500"></div>
+        <p class="mt-4 text-center">Don't have an account? 
+           <a href="/auth" class="text-blue-500 underline">Register here</a>
+        </p>
+    </div>
 </body>
 </html>
