--- a/public/static/products_by_category.html
+++ b/public/static/products_by_category.html
@@ -5,7 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products by Category</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script src="/public/script/script.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', async () => {
+            const urlParams = new URLSearchParams(window.location.search);
+            const category = urlParams.get('category');
+            if (category) {
+                document.getElementById('category-title').innerText = category.charAt(0).toUpperCase() + category.slice(1);
+                await loadProductsByCategory(category);
+            }
+        });
+
+        async function loadProductsByCategory(category) {
+            const response = await fetch(`/api/products?category=${category}`);
+            const products = await response.json();
+            const productsList = document.getElementById('products-list');
+            productsList.innerHTML = products.map(product => `
+                <div class="bg-white p-4 rounded-lg shadow-md">
+                    <h3 class="text-xl font-bold mb-2">${product.name}</h3>
+                    <p class="text-gray-600">${product.description}</p>
+                    <p class="text-gray-600">$${product.price}</p>
+                    <p class="text-gray-600">${product.quantity} in stock</p>
+                </div>
+            `).join('');
+        }
+    </script>
 </head>
 <body class="bg-gray-100">
     <header class="bg-green-600 text-white p-4 shadow-md">
