--- a/public/static/auth.html
+++ b/public/static/auth.html
@@ -46,10 +46,10 @@
         <h1 class="text-3xl font-bold text-center mb-6">Sign Up</h1>
         <form id="signup-form" onsubmit="handleSignUp(event)">
             <div class="mb-4">
-                <input type="text" name="firstName" placeholder="First Name" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                <input type="text" name="first_name" placeholder="First Name" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
             </div>
             <div class="mb-4">
-                <input type="text" name="lastName" placeholder="Last Name" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                <input type="text" name="last_name" placeholder="Last Name" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
             </div>
             <div class="mb-4">
                 <input type="email" name="email" placeholder="Email Address" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
@@ -63,6 +63,9 @@
             <div class="mb-4">
                 <input type="text" name="phoneNumber" placeholder="Phone Number" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
             </div>
+            <div class="mb-4">
+                <input type="text" name="location" placeholder="Location" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+        </div>
             <div class="mb-4">
                 <select name="role" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
                     <option value="">Select Role</option>
