--- a/public/static/farmer_dashboard.html
+++ b/public/static/farmer_dashboard.html
@@ -16,7 +16,7 @@
                     }
                 });
                 const user = await response.json();
-                document.getElementById('user-name').innerText = `${user.firstName} ${user.lastName}`;
+                document.getElementById('user-name').innerText = `${user.first_name} ${user.last_name}`;
                 document.getElementById('user-email').innerText = user.email;
                 document.getElementById('user-location').innerText = `Location: ${user.location}`;
             }
@@ -31,6 +31,51 @@
             localStorage.removeItem('userID');
             localStorage.removeItem('token');
             window.location.href = '/';
+        }
+        function openEditProfileModal() {
+            document.getElementById('edit-profile-modal').classList.remove('hidden');
+        }
+
+        function closeEditProfileModal() {
+            document.getElementById('edit-profile-modal').classList.add('hidden');
+        }
+
+        function updateProfile(event) {
+            event.preventDefault();
+
+            const userID = localStorage.getItem('userID');
+            const token = localStorage.getItem('token');
+
+            const updatedUser = {
+                first_name: document.getElementById('edit-first-name').value,
+                last_name: document.getElementById('edit-last-name').value,
+                email: document.getElementById('edit-email').value,
+                phone_number: document.getElementById('edit-phone-number').value,
+                location: document.getElementById('edit-location').value
+            };
+
+            fetch(`/api/user/${userID}`, {
+                method: 'PUT',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Authorization': `Bearer ${token}`
+                },
+                body: JSON.stringify(updatedUser)
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.message) {
+                    console.error(data.message);
+                } else {
+                    document.getElementById('user-name').textContent = `${data.first_name} ${data.last_name}`;
+                    document.getElementById('user-email').textContent = data.email;
+                    document.getElementById('user-location').textContent = data.location || 'Location not set';
+                    closeEditProfileModal();
+                }
+            })
+            .catch(error => {
+                console.error('Error updating profile:', error);
+            });
         }
 
         async function handleFormSubmit(event, url, method) {
@@ -275,9 +320,40 @@
                         <p id="user-location" class="text-gray-600">Loading...</p>
                     </div>
                 </div>
-                <button class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 transition duration-200">Edit Profile</button>
+                <button class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 transition duration-200" onclick="updateProfile(event)">Edit Profile</button>
                 <button onclick="logout()" class="bg-red-500 text-white p-2 rounded hover:bg-red-600 transition duration-200 ml-4">Logout</button>
             </div>
+        </div>
+    </div>
+    <div id="edit-profile-modal" class="fixed inset-0 bg-gray-800 bg-opacity-75 flex items-center justify-center hidden">
+        <div class="bg-white p-6 rounded-lg shadow-md w-1/3">
+            <h2 class="text-2xl font-bold mb-4">Edit Profile</h2>
+            <form id="edit-profile-form" onsubmit="updateProfile(event)">
+                <div class="mb-4">
+                    <label for="edit-first-name" class="block text-gray-700">First Name</label>
+                    <input type="text" id="edit-first-name" class="w-full p-2 border border-gray-300 rounded mt-1" required>
+                </div>
+                <div class="mb-4">
+                    <label for="edit-last-name" class="block text-gray-700">Last Name</label>
+                    <input type="text" id="edit-last-name" class="w-full p-2 border border-gray-300 rounded mt-1" required>
+                </div>
+                <div class="mb-4">
+                    <label for="edit-email" class="block text-gray-700">Email</label>
+                    <input type="email" id="edit-email" class="w-full p-2 border border-gray-300 rounded mt-1" required>
+                </div>
+                <div class="mb-4">
+                    <label for="edit-phone-number" class="block text-gray-700">Phone Number</label>
+                    <input type="text" id="edit-phone-number" class="w-full p-2 border border-gray-300 rounded mt-1">
+                </div>
+                <div class="mb-4">
+                    <label for="edit-location" class="block text-gray-700">Location</label>
+                    <input type="text" id="edit-location" class="w-full p-2 border border-gray-300 rounded mt-1">
+                </div>
+                <div class="flex justify-end">
+                    <button type="button" class="bg-gray-500 text-white p-2 rounded hover:bg-gray-600 transition duration-200 mr-2" onclick="closeEditProfileModal()">Cancel</button>
+                    <button type="submit" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 transition duration-200">Save</button>
+                </div>
+            </form>
         </div>
     </div>
 </body>
