--- a/public/static/login.html
+++ b/public/static/login.html
@@ -63,7 +63,7 @@
         </form>
         <div id="login-result" class="mt-4 text-center text-red-500"></div>
         <p class="mt-4 text-center">Don't have an account? 
-           <a href="/auth" class="text-blue-500 underline">Register here</a>
+           <a href="/register" class="text-blue-500 underline">Register here</a>
         </p>
     </div>
 </body>
